--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
 
       - run: nix build
 
+      - run: nix build docs
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
