--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,12 @@ jobs:
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
 
+      - name: Setup Nix cache
+        uses: cachix/cachix-action@v16
+        with:
+          name: zigplug
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+
       - name: Check formatting
         run: nix develop -c zig fmt --check .
 
