--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,9 @@ jobs:
       - name: Check formatting
         run: zig fmt --check .
 
+      - name: Install dependencies
+        run: |
+          apt install libx11-dev libxrender-dev libxcursor-dev libxrandr-dev libxext-dev
+
       - name: Run unit tests
         run: zig build test
