--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          apt install libx11-dev libxrender-dev libxcursor-dev libxrandr-dev libxext-dev
+          sudo apt install libx11-dev libxrender-dev libxcursor-dev libxrandr-dev libxext-dev
 
       - name: Run unit tests
         run: zig build test
