ci: build examples

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,14 @@ jobs:
 
       - name: Run unit tests
         run: zig build test
+
+      - name: Install backend dependencies
+        run: |
+          sudo apt install libgl-dev libvulkan-dev libcairo2-dev
+
+      - name: Build examples
+        run: |
+          for example in $(find $(realpath ..) -path "*/pugl.zig/examples/*/build.zig"); do
+            cd $(dirname $example)
+            zig build
+          done
