--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt update
           sudo apt install libx11-dev libxrender-dev libxcursor-dev libxrandr-dev libxext-dev
 
       - name: Run unit tests
